@@ -89,7 +89,11 @@
     Instellingen, variabelen en functies zijn allemaal beschreven in de
     uitvoerige referentiehandleiding van het programma.
   </dd>
-
+  
+<a href="@IMAGES@screenshot-macos.png"><img
+  src="@IMAGES@screenshot-macos-small.png" align="right" alt="LilyPond
+  op MacOS" ></a>
+  
   <dt>Uitstekende support</dt>
   <dd>
     LilyPond werkt op alle bekende besturingssystemen: Linux, MacOS X, en Windows.
