@@ -84,7 +84,8 @@
     Settings, variables and functions are all documented in the
     comprehensive program reference manual.
   </dd>
-<a href="@IMAGES@screenshot-macos.png"><img src="@IMAGES@screenshot-macos-small.png" align="right"
+
+  <a href="@IMAGES@screenshot-macos.png"><img src="@IMAGES@screenshot-macos-small.png" align="right"
   alt="lilypond on MacOS" caption="bla"></a>
 
   <dt>Excellent support</dt>
